--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <h1>Bem vindo</h1>
 <h2>Olá mundo</h2>
 <p>Parágrafo da home...</p>
+
+<h3>Cruandi página home do meu site</h3>
+<p>Sujeito programador</p>
+<p>Bem vindo ao site</p>
